@@ -22,16 +22,18 @@
 		var newrow = lastcontactelem.parentNode.insertRow(lastcontactelem.rowIndex + 1);
 		newrow.className = 'LIGHT';
 		newrow.id = 'contact' + nr;
-		newrow.innerHTML = '<TD width="1%" style="vertical-align: top"><IMG src="img/phone.gif" alt=""></TD>'
-			+ '<TD width="99%" NOWRAP>'
-			+ '<INPUT TYPE="text" size="15" value="" name="customerdata[contacts][' + nr + '][phone]"'
+		var newcell1 = newrow.insertCell(0);
+		var newcell2 = newrow.insertCell(1);
+		newcell1.style.verticalAlign = "top";
+		newcell1.innerHTML = '<IMG src="img/phone.gif" alt="">'
+		newcell2.innerHTML = '<INPUT TYPE="text" size="15" value="" name="customerdata[contacts][' + nr + '][phone]"'
 				+ ' onmouseover="popup(\'{trans("Enter contact phone")}\')" onmouseout="pophide()">'
 			+ '<INPUT TYPE="checkbox" value="{$smarty.const.CONTACT_MOBILE}"'
 				+ ' name="customerdata[contacts][' + nr + '][type][]" ID="chkmobile' + nr + '"><label for="chkmobile' + nr + '">{trans("mobile")}</label>'
 			+ '<INPUT TYPE="checkbox" value="{$smarty.const.CONTACT_FAX}"'
 				+ ' name="customerdata[contacts][' + nr + '][type][]" ID="chkfax' + nr + '"><label for="chkfax' + nr + '">{trans("fax")}</label>'
 			+ '<BR><INPUT TYPE="text" size="38" value="" name="customerdata[contacts][' + nr + '][name]"'
-				+ ' onmouseover="popup(\'{trans("Enter contact name/description (optional)")}\')" onmouseout="pophide()"></TD>';
+				+ ' onmouseover="popup(\'{trans("Enter contact name/description (optional)")}\')" onmouseout="pophide()">';
 		contactscountelem.value = parseInt(nr) + 1;
 	}
 //-->
